--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ navigator.mediaDevices.getUserMedia({ video: true })
   });
 
             var ticker = document.createElement('div');
-ticker.innerHTML = 'OpenAI Experiments with Natalie Pistunovich';
+ticker.innerHTML = 'OpenAI Experiments with: Natalie Pistunovich';
 ticker.style.position = 'absolute';
 ticker.style.bottom = '0';
 ticker.style.left = '0';
@@ -36,10 +36,9 @@ ticker.style.right = '0';
 ticker.style.textAlign = 'center';
 ticker.style.fontSize = '2em';
 ticker.style.color = 'white';
-ticker.style.backgroundColor = 'black';
 ticker.style.zIndex = '1';
 document.body.appendChild(ticker);
-ticker.style.backgroundColor = 'grey';
+ticker.style.backgroundColor = 'blue';
 ticker.style.bottom = '20%';
 
 
@@ -55,7 +54,7 @@ speechRecognitionResult.style.left = '0';
 speechRecognitionResult.style.right = '0';
 speechRecognitionResult.style.textAlign = 'center';
 speechRecognitionResult.style.fontSize = '2em';
-speechRecognitionResult.style.color = 'black';
+speechRecognitionResult.style.color = 'green';
 speechRecognitionResult.style.backgroundColor = 'white';
 speechRecognitionResult.style.zIndex = '1';
 document.body.appendChild(speechRecognitionResult);
